Some findbugs performance hints
git-svn-id: https://svn.apache.org/repos/asf/directory/shared/trunk@1083583 13f79535-47bb-0310-9956-ffa450edef68